[package]
name = "laqf2"
version = "0.1.1"
edition = "2021"
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
description = "v2 of the LAQ-Fort Encryption Scheme"
license = "MIT"
repository = "https://github.com/zanderlewis/laqf-2"
readme = "README.md"

[dependencies]
pqc_kyber = { version = "0.7.1", features = ["kyber1024"] }
aes-gcm = "0.10.0"
rand = "0.9.0"
argon2 = "0.6.0-pre.1"
hmac = "0.12.1"
sha2 = "0.10.8"
rand_chacha = "0.9.0"
ctr = "0.9.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
